--- a/index.html
+++ b/index.html
@@ -1,7 +1,77 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<!-- This page is adapted from w3schools "How to make a link tree website https://www.w3schools.com/howto/howto_website_create_linktree.asp" -->
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Add your name below -->
+  <title>Paul Yang</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body class="main-text-color">
+  <!-- Content container. Everything except footer goes here -->
+  <div class="container">
+    <!-- Image and name container. Put your replacement photo—which you should crop to be square—in the images folder, then change the source attribute to images/yourportraitfilename.jpg. This path says, "Look in the images folder for yourportraitfilename.jpg." Be sure to change the alt text, too. -->
+    <div class="image-container">
+      <img src="images/portrait.jpg" alt="Photo by Art Hauntington">
+    </div>
+    <div class="intro">
+      I'm <span class="name"><strong>Paul Yang</strong></span>, currently a junior in computer science. I like rock climbing and also playing the piano and guitar. 
+    </div>
+    <div class="section-header">
+      <h1>My work</h1>
+    </div>
+    <!-- Replace the # inside of the href="#" with your links. -->
+    <div class="links-container">
+      <div class="button toggle">Blog post</div>
+      <div class="slidedown">
+        <div class="description">
+          <h2>Blog post title</h2>
+          <p>Whether it be running on the tread mill, lifting weights, or using machines, 
+            there is a large population of people that find these exercises very monotonous and boring.
+             Rock climbing is a sport that is somewhat niche and not mainstream compared to sports such as basketball,
+              soccer, swimming, and has just started to become popular.</p>
+          <a href="#" class="external-link" target="_blank">Read</a>
+        </div>
+      </div>
+
+      <div class="button toggle">Video</div>
+      <div class="slidedown">
+        <div class="description">
+          <h2>Video title</h2>
+          <p>Add a short but appealing description of your video.</p>
+          <a href="#" class="external-link" target="_blank">Watch</a>
+        </div>
+      </div>
+
+      <div class="button toggle">Podcast</div>
+      <div class="slidedown">
+        <div class="description">
+          <h2>Podcast title</h2>
+          <p>Add a short but appealing description of your podcast</p>
+          <a href="#" class="external-link" target="_blank">Listen</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Replace # with PDF from Google Docs, or replace the entire section with whatever you want. Or delete it! Or add another section below it!-->
+    <div class="section-header">
+      <h1>About me</h1>
+    </div>
+
+    <div class="links-container">
+      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+    </div>
+
+  </div>
+  <div class="footer">
+    <p>© Paul Yang , 2024. Based on a design by <a
+        href="https://www.w3schools.com/howto/howto_website_create_linktree.asp" target="_blank">w3schools</a>.
+    </p>
+  </div>
+  <script type="text/javascript" src="js/slider.js"></script>
 </body>
+
 </html>
