added blog link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             there is a large population of people that find these exercises very monotonous and boring.
              Rock climbing is a sport that is somewhat niche and not mainstream compared to sports such as basketball,
               soccer, swimming, and has just started to become popular.</p>
-          <a href="#" class="external-link" target="_blank">Read</a>
+          <a href="https://medium.com/@yangaapaul/why-start-rock-climbing-for-fitness-fc4d93c7bd1e" class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
