Added podcast link and linkedin

--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
       <div class="slidedown">
         <div class="description">
           <h2>Podcast title</h2>
-          <p>Add a short but appealing description of your podcast</p>
-          <a href="#" class="external-link" target="_blank">Listen</a>
+          <p>Our podcast gets a perspective on the influencer culture that has recently taken over social media. Eileen, my sister, has 
+            amassed a respectable following on instagram and TikTok, and our podcast delves into her journey with social media and how 
+            she started. 
+          </p>
+          <a href="https://on.soundcloud.com/4hdrE4NdEbJogWHTA" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
@@ -59,6 +62,9 @@
     <!-- Replace # with PDF from Google Docs, or replace the entire section with whatever you want. Or delete it! Or add another section below it!-->
     <div class="section-header">
       <h1>About me</h1>
+    </div>
+    <div class="links-container">
+      <a href="https://www.linkedin.com/in/paul-yang-b9b2ba212/" class="button button-background-color" target="_blank">LinkedIn</a>
     </div>
 
     <div class="links-container">
