--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="https://drive.google.com/file/d/1TMrNbELfG263BTHuErjd2m8NEhkWphX0/view?usp=sharing" class="button" target="_blank">Resume</a>
     </div>
 
   </div>
