Added video description and link

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
       <div class="slidedown">
         <div class="description">
           <h2>Video title</h2>
-          <p>Add a short but appealing description of your video.</p>
-          <a href="#" class="external-link" target="_blank">Watch</a>
+          <p>I've been playing fingerstyle guitar for over a year now in addition to other instruments. Here are some tips for what I would do if I could start over again. 
+            The fastest way to get better!
+          </p>
+          <a href="https://youtu.be/X3PuLuzS4bw" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
