--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="button toggle">Blog post</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Blog post title</h2>
+          <h2>Why Start Rock Climbing for Fitness</h2>
           <p>Whether it be running on the tread mill, lifting weights, or using machines, 
             there is a large population of people that find these exercises very monotonous and boring.
              Rock climbing is a sport that is somewhat niche and not mainstream compared to sports such as basketball,
@@ -43,7 +43,7 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video title</h2>
+          <h2>How I would start fingerstyle guitar if I could start over</h2>
           <p>I've been playing fingerstyle guitar for over a year now in addition to other instruments. Here are some tips for what I would do if I could start over again. 
             The fastest way to get better!
           </p>
@@ -54,7 +54,7 @@
       <div class="button toggle">Podcast</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Podcast title</h2>
+          <h2>From Textbooks to Tiktoks: The Life of a Student Content Creator</h2>
           <p>Our podcast gets a perspective on the influencer culture that has recently taken over social media. Eileen, my sister, has 
             amassed a respectable following on instagram and TikTok, and our podcast delves into her journey with social media and how 
             she started. 
